# llvm2tosa

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DEVELOPMENT.md  FINAL_README.md  LICENSE  Makefile  README.md  add_test.ll  axpy_test.ll  axpy_test_output.mlir  broadcast_final.mlir  broadcast_output.mlir  broadcast_test.ll  cmake_install.cmake  comprehensive_output.mlir  comprehensive_test.ll  comprehensive_test.sh  comprehensive_tosa_test.ll  conv2d_test.ll  converter  converter.cpp  converter_demo  correct_broadcast_output.mlir  dot_product_expected.mlir  dot_product_fixed.ll  dot_product_output.mlir  dot_product_result.mlir  dot_product_test.ll  examples.ll  expected_tosa_output.mlir  llvm-to-tosa-converter.cpp  llvm2tosa  main.cpp  new_conv2d_test.ll  output.mlir  output_comprehensive.mlir  real_llvm_examples.ll  real_tosa_conversion.mlir  realistic_converter  (+12 more)
examples/: comprehensive_test.ll  expected_tosa.mlir  simple.ll
include/: LLVMToTosaConverter.h
src/: CompleteConverter.cpp  ControlFlowConverter.cpp  InstructionConverter.cpp  LLVMToTosaConverter.cpp  MemoryModelConverter.cpp  TypeConverter.cpp
tests/: test_converter.sh  unit_test.cpp
